# EtherMark

./: README.md
Script/: main.py
Script/cli/: commons.py  parser.py
Script/cli/commands/: label_expansion.py  split_packages.py
Script/config/: constants.py
Script/core/: commons.py  label_expansion.py  label_expansion_inplace.py  split_packages.py
Script/pcap/: MemoryMappedPcap.py
Script/pcap/constants/: IEEE802_Numbers.py  IPProto_Numbers.py  PcapLinkType.py  constants.py
Script/pcap/dissectors/general/: L2Dissector.py  L3Dissector.py  PacketDissector.py
Script/pcap/dissectors/specific/L2/: EthernetDissector.py
Script/pcap/dissectors/specific/L3/: IPv4Dissector.py
Script/pcap/dissectors/specific/L4/: TCPDissector.py  UDPDissector.py
oot/modules/EtherMark/: BUILD.bazel  Kbuild  Makefile  etherMark.c
